修复产品表导入解析契约